Correction mixin: M_Troncate.   text-overflow: hidden; remplacé par overflow: hidden;

--- a/SCSS/_mixins.scss
+++ b/SCSS/_mixins.scss
@@ -236,6 +236,6 @@ Parametres:
 /*---------------------------------------------------------*/
 @mixin M_Troncate {
   white-space: nowrap;
-  text-overflow: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
